# wmcontroller

./: README.md  main.py  pyproject.toml
src/wmcontroller/: .env.example  env.example  menu.py  wm_manager.py  wmctrl.py  wmrmsrvr.py
tests/: test_myprog.py  test_wmctrl.py
