[project]
name = "wmcontroller"
version = "0.1.8"
description = "Module that allows one to check status and stop webMethods component applications, for now, limited to the integration server component.  Start and restart actions are planned as future functionality.  The file wmctrl.py can be run with direct inputs, or run by calling other Python objects, such as the wm_manager.py file, for a simple text-based user interface.  This version, which is a bug fix, is also a replacement for the retired wmcontroller-0.1.3 build files.  In the event of a disaster recovery or other problem, an organization running the wmcontroller-0.1.3 version can replace that build with this build to maintain compatibility."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "environs>=14.1.1",
    "fabric2>=3.2.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "test_pypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
